# rusty-sponge

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: throughput.rs
completions/: _rusty-sponge  rusty-sponge.bash  rusty-sponge.fish  rusty-sponge.ps1
docs/: COMPATIBILITY.md  DESIGN.md  ci-runtime-baseline.md  feature-layout.md  public-api.txt
fixtures/: README.md
fixtures/inputs/append_missing/: append.in
fixtures/inputs/existing_target/: replace.in  replace.preexisting
fixtures/inputs/happy_path/: small_text.in
fixtures/inputs/missing_target/: created.in
fixtures/inputs/symlink_target/: via_symlink.in  via_symlink.linkdest
fixtures/moreutils_outputs/append_existing/: append.target
fixtures/moreutils_outputs/stdout_passthrough/: binary.stdout
fixtures/moreutils_outputs/strict_h/: dash_h.stdout
fixtures/moreutils_outputs/strict_help/: long_help.stderr
fixtures/moreutils_outputs/strict_unknown_option/: dash_capX.stderr  dash_x.stderr  long_unknown.stderr
fixtures/moreutils_outputs/symlink_target/: via_symlink.symlink
fixtures/moreutils_outputs/target_is_directory/: dir.stderr
fixtures/perf/: .gitignore
fixtures/scripts/: capture-sponge.sh  gen-perf-input.sh
src/: atomic.rs  buffer.rs  cli.rs  error.rs  lib.rs  main.rs  mode.rs  signal.rs  strict.rs  writethrough.rs
tests/: append_mode.rs  atomic_safety.rs  cli_errors.rs  compat_default.rs  compat_strict.rs  completions_drift.rs  lib_api.rs  symlink.rs
tests/common/: mod.rs
